--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,4 @@
 (executable
  (name main)
  (public_name mantis2github)
- (libraries unix mysql yojson cmdliner))
+ (libraries unix mysql yojson cmdliner re))
